--- a/selfdrive/ui/sunnypilot/SConscript
+++ b/selfdrive/ui/sunnypilot/SConscript
@@ -54,12 +54,8 @@ vehicle_panel_qt_src = [
   "sunnypilot/qt/offroad/settings/vehicle/platform_selector.cc",
 ]
 
-sp_assets_src = [
-  "#selfdrive/ui/sunnypilot/assets/assets.qrc",
-]
-
 sp_widgets_src = widgets_src + network_src
 sp_qt_src = qt_src + lateral_panel_qt_src + vehicle_panel_qt_src
 sp_qt_util = qt_util
 
-Export('sp_widgets_src', 'sp_qt_src', "sp_qt_util", "sp_assets_src")
+Export('sp_widgets_src', 'sp_qt_src', "sp_qt_util")
